--- a/Tienda/ConsultaListas.xaml
+++ b/Tienda/ConsultaListas.xaml
@@ -4,9 +4,95 @@
              x:Class="Tienda.ConsultaListas"
              Title="ConsultaListas">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <HorizontalStackLayout
+            Spacing="250"
+            HorizontalOptions="Center"
+            Margin="15">
+            <Picker
+                x:Name="PickerCiudad"
+                Title="Seleccione una ciudad"
+                SelectedIndexChanged="PickerCiudad_SelectedIndexChanged">
+                <Picker.ItemsSource>
+                    <x:Array Type ="{x:Type x:String}">
+                        <x:String>Todos</x:String>
+                        <x:String>Ninguna</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+            </Picker>
+
+            <Picker
+                x:Name="PickerVip"
+                Title="VIP / No VIP"
+                SelectedIndexChanged="PickerVip_SelectedIndexChanged">
+                <Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>Todos</x:String>
+                        <x:String>VIP</x:String>
+                        <x:String>No VIP</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+                
+            </Picker>
+        </HorizontalStackLayout>
+        <Grid
+            ColumnDefinitions="*,*,*,*,*,*"
+            ColumnSpacing="60"
+            Margin="25,10">
+            <Label
+                Grid.Column="0"
+                FontAttributes="Bold"
+                Text="Apellidos"/>
+            <Label
+                Grid.Column="1"
+                FontAttributes="Bold"
+                Text="Nombre"/>
+            <Label
+                Grid.Column="2"
+                FontAttributes="Bold"
+                Text="Ciudad"/>
+            <Label
+                Grid.Column="3"
+                FontAttributes="Bold"
+                Text="Correo Electrónico"/>
+            <Label
+                Grid.Column="4"
+                FontAttributes="Bold"
+                Text="Comentarios"/>
+            <Label
+                Grid.Column="5"
+                FontAttributes="Bold"
+                Text="VIP"/>
+        </Grid>
+        <CollectionView
+            x:Name="CollectionViewClientes"
+            ItemsSource="{Binding ClientesFiltrados}"> <!-- Hay que crear el array en el codigo CS -->
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid
+                        ColumnDefinitions="*,*,*,*,*,*"
+                        ColumnSpacing="50"
+                        Margin="25,10">
+                        <Label
+                            Grid.Column="0"
+                            Text="{Binding Apellidos}"/>
+                        <Label
+                            Grid.Column="1"
+                            Text="{Binding Nombre}"/>
+                        <Label
+                            Grid.Column="2"
+                            Text="{Binding Ciudad}"/>
+                        <Label
+                            Grid.Column="3"
+                            Text="{Binding Correo}"/>
+                        <Label
+                            Grid.Column="4"
+                            Text="{Binding Comentarios}"/>
+                        <Label
+                            Grid.Column="5"
+                            Text="{Binding Vip}"/>
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate> 
+        </CollectionView>
     </VerticalStackLayout>
 </ContentPage>
